Test framework fixes